--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,23 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --main-font-family: Inter, sans-serif;
+  --accent-font-family: "Press Start 2P", fantasy;
+  --sparks-color: #ff0000;
+  --page-background: #fff;
+  --background-color: #d3d3d3;
+  --background-image: repeating-linear-gradient(
+      to left,
+      #d3d3d3 0 2px,
+      #d3d3d300 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, #d3d3d300 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --title-font-weight: "wght" 700;
+  --text-font-weight: "wght" 400;
+  --header-background: var(--page-background);
+  --text-color: #000;
+  --mix-blend-color: var(--page-background);
+  --stroke-color: var(--text-color);
+  --label-stroke-color: var(--page-background);
+}
