--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,56 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+.theme-menu__button:disabled::before {
+  animation-name: arrowhead;
+  transition-timing-function: ease-out;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+.like-icon.is-liked .heart {
+  animation-name: heart;
+  transition-timing-function: ease-in;
+  animation-duration: 0.3s;
+  animation-delay: 0.1s;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+}
+
+.like-icon.is-liked .sparks {
+  animation-name: sparks;
+  transition-timing-function: ease-in;
+  animation-duration: 0.3s;
+  animation-delay: 0.3s;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+}
+
+@keyframes arrowhead {
+  from {
+    transform: translate(0);
+  }
+  to {
+    transform: translate(4px);
+  }
+}
+
+@keyframes heart {
+  from {
+    scale: 1;
+  }
+  to {
+    scale: 1.5;
+  }
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
