--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,9 @@
 }
 
 body {
-  margin: 0;
+  font-family: var(--main-font-family), sans-serif;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 h1,
@@ -50,4 +52,9 @@ ol {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   white-space: nowrap;
+}
+
+img {
+  width: 100%;
+  height: 100%;
 }
