--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,83 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+  --page-background: #fff;
+  --background-color: #d3d3d3;
+  --background-image: repeating-linear-gradient(
+      to left,
+      #d3d3d3 0 2px,
+      #d3d3d300 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, #d3d3d300 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --title-font-weight: "wght" 700;
+  --text-font-weight: "wght" 400;
+  --header-background: var(--page-background);
+  --text-color: #000;
+  --mix-blend-color: var(--page-background);
+  --stroke-color: var(--text-color);
+  --label-stroke-color: var(--page-background);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --page-background: #fff;
+    --background-color: #d3d3d3;
+    --background-image: repeating-linear-gradient(
+        to left,
+        #d3d3d3 0 2px,
+        #d3d3d300 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #d3d3d3 0 2px, #d3d3d300 2px 4px),
+      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+    --title-font-weight: "wght" 700;
+    --text-font-weight: "wght" 400;
+    --header-background: var(--page-background);
+    --text-color: #000;
+    --mix-blend-color: var(--page-background);
+    --stroke-color: var(--text-color);
+    --label-stroke-color: var(--page-background);
+  }
+}
+
+:root.theme-dark {
+  --page-background: #000;
+  --background-color: var(--page-background);
+  --background-image: repeating-linear-gradient(
+      to left,
+      #000000 0 2px,
+      #00000000 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000000 0 2px, #00000000 2px 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
+  --title-font-weight: "wght" 785;
+  --text-font-weight: "wght" 465;
+  --header-background: var(--page-background);
+  --text-color: #00cc14;
+  --mix-blend-color: var(--text-color);
+  --stroke-color: var(--text-color);
+  --label-stroke-color: var(--page-background);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --page-background: #000;
+    --background-color: var(--page-background);
+    --background-image: repeating-linear-gradient(
+        to left,
+        #000000 0 2px,
+        #00000000 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #000000 0 2px, #00000000 2px 4px),
+      linear-gradient(to bottom, #007f0c, #004306);
+    --title-font-weight: "wght" 785;
+    --text-font-weight: "wght" 465;
+    --header-background: var(--page-background);
+    --text-color: #00cc14;
+    --mix-blend-color: var(--text-color);
+    --stroke-color: var(--text-color);
+    --label-stroke-color: var(--page-background);
+  }
+}
