исправлены все замечания и советы

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,16 +13,71 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
 
-.theme-menu__button:disabled::before {
-  animation-name: arrowhead;
-  transition-timing-function: ease-out;
-  animation-duration: 0.5s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+.like-icon .heart {
+  transform-origin: center;
+}
+
+.like-icon .contour {
+  fill: var(--text-color, #000);
+  transition: fill 0.1s linear;
+}
+
+.like-icon .main-body {
+  fill: var(--page-background, #fff);
+  transition: fill 0.3s linear;
+}
+
+.like-icon .core {
+  fill: var(--page-background, #fff);
+  transition: fill 0.3s linear 0.03s;
+}
+
+.like-icon .sparks {
+  opacity: 0;
+  fill: var(--sparks-color, #ff0000);
+}
+
+/* hover  */
+
+.like-icon:hover .main-body {
+  fill: var(--text-color, #000);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:hover .core {
+  fill: var(--text-color, #000);
+  transition: fill 0.3s linear;
+}
+
+/* active  */
+
+.like-icon:active .main-body {
+  fill: var(--sparks-color, #ff0000);
+}
+
+.like-icon:active .core {
+  fill: var(--sparks-color, #ff0000);
+}
+
+/* is-liked состояние лайкнутой иконки */
+
+.like-icon.is-liked .contour {
+  fill: var(--sparks-color, #ff0000);
+  transition: fill 0.3s linear 0.06s 1 alternate;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--sparks-color, #ff0000);
+  transition: fill 0.3s linear 0.05s 1 alternate;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--sparks-color, #ff0000);
+  transition: fill 0.3s linear 1 alternate;
 }
 
 .like-icon.is-liked .heart {
-  animation-name: heart;
+  animation-name: heart-scaling;
   transition-timing-function: ease-in;
   animation-duration: 0.3s;
   animation-delay: 0.1s;
@@ -31,7 +86,7 @@
 }
 
 .like-icon.is-liked .sparks {
-  animation-name: sparks;
+  animation-name: sparks-occurrence;
   transition-timing-function: ease-in;
   animation-duration: 0.3s;
   animation-delay: 0.3s;
@@ -39,7 +94,19 @@
   animation-direction: alternate;
 }
 
-@keyframes arrowhead {
+/* анимация меню */
+
+.theme-menu__button:disabled::before {
+  animation-name: arrowhead-moving-towards;
+  transition-timing-function: ease-out;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+/* @keyframes  */
+
+@keyframes arrowhead-moving-towards {
   from {
     transform: translate(0);
   }
@@ -48,7 +115,7 @@
   }
 }
 
-@keyframes heart {
+@keyframes heart-scaling {
   from {
     scale: 1;
   }
@@ -57,7 +124,7 @@
   }
 }
 
-@keyframes sparks {
+@keyframes sparks-occurrence {
   from {
     opacity: 0;
   }
