--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: var(--main-font-family), sans-serif;
+  font-family: var(--main-font-family, Inter, sans-serif);
   max-width: 700px;
   margin: 0 auto;
 }
